Added anchors and indent in TOC.

--- a/dr.css
+++ b/dr.css
@@ -24,7 +24,6 @@ pre.code {
     background: #333;
     color: #fff;
     overflow-x: auto;
-/*    padding: 1em;*/
     padding: 1em 2.5em;
     margin: 0 -2.5em;
 }
@@ -67,7 +66,6 @@ dd.dr-type {
 }
 dd.dr-description {
     display: table;
-/*    line-height: 1.5;*/
 }
 .dr-type {
     float: left;
@@ -127,10 +125,17 @@ h1 {
     font-size: 2.6em;
     margin: 0;
 }
-h3, h2 {
-    margin: 1em -2em;
-    padding: .4em 2em 0;
+h2, h3, h4, h5 {
+    margin: 1em 0;
+    padding: .4em 0 0;
     font-weight: 100;
+    position: relative;
+}
+h5 {
+    font-size: 1.1em;
+}
+h4 {
+    font-size: 1.2em;
 }
 h3 {
     font-size: 1.8em;
@@ -138,10 +143,16 @@ h3 {
 h2 {
     font-size: 2.4em;
 }
-h3.dr-method {
+h2.dr-method,
+h3.dr-method,
+h4.dr-method,
+h5.dr-method {
     color: #900;
 }
-h3.dr-property {
+h2.dr-property,
+h3.dr-property,
+h4.dr-property,
+h5.dr-property {
     color: #009;
 }
 p.header {
@@ -176,6 +187,26 @@ p.header {
     text-decoration: none;
     color: #333;
     padding-top: .5em;
+    position: relative;
+    z-index: 1000;
+}
+.dr-toc li.dr-lvl1 a {
+    padding-left: 1em;
+}
+.dr-toc li.dr-lvl2 a {
+    padding-left: 2em;
+}
+.dr-toc li.dr-lvl3 a {
+    padding-left: 3em;
+}
+.dr-toc li.dr-lvl4 a {
+    padding-left: 4em;
+}
+.dr-toc li.dr-lvl5 a {
+    padding-left: 5em;
+}
+.dr-toc li.dr-lvl6 a {
+    padding-left: 6em;
 }
 .dr-toc a.dr-property {
     color: #339;
@@ -184,13 +215,44 @@ p.header {
     color: #933;
 }
 .dr-toc a:hover {
-    text-shadow: 0 0 3px #333;
+    text-shadow: 0 0 2px #333;
 }
 .dr-toc a.dr-property:hover {
-    text-shadow: 0 0 3px #00c;
+    text-shadow: 0 0 2px #66c;
 }
 .dr-toc a.dr-method:hover {
-    text-shadow: 0 0 3px #c00;
+    text-shadow: 0 0 2px #c66;
+}
+a.dr-hash {
+    -webkit-transition: opacity 0.2s linear;
+    color: #333;
+    float: left;
+    font-family: Menlo, "Arial Unicode MS", sans-serif;
+    left: -20px;
+    line-height: 1;
+    margin: 0 -1em 0 -.75em;
+    overflow: hidden;
+    opacity: 0;
+    text-decoration: none;
+    width: 1em;
+}
+a.dr-link {
+    position: relative;
+    color: #3875c0;
+}
+a.dr-link:hover {
+    text-shadow: 0 1px 2px #999;
+    bottom: 1px;
+    padding-bottom: 1px;
+}
+a.dr-link:visited {
+    color: #7051bc;
+}
+h2:hover a.dr-hash,
+h3:hover a.dr-hash,
+h4:hover a.dr-hash,
+h5:hover a.dr-hash {
+    opacity: 1;
 }
 p {
     margin: 0 0 .5em;
